--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -135,10 +135,10 @@ textarea {
     }
 
     @include lg {
-        padding: 100px 0;
+        padding: 160px 0;
     }
     @include xl{
-        padding: 100px 0;
+        padding: 180px 0;
     };
 }
 
